sensord (0.6.33) unstable; urgency=low

  *

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Fri, 17 Dec 2010 12:39:45 +0200

sensord (0.6.32) unstable; urgency=low

  [Lihan Guo]
  * Fixes: NB#199971 - proximity sensor never returns True
  * Added new tap feature, tap sensor offers single, double and single/double tap data.
  * Added test case for stationary
  * Changed calibrationHandler to get parameter value from config.

  [Timo Rongas]
  * Fixes: NB#206204 - sensord prints debugs to console on startup
  * Fixes: NB#203996 - sensord-contextfw-tests fail during execution.
  * Fixes: NB#196769 - Accelerometer Axis swapped (compared to SD)
  * Screen.TopEdge rotation compared to raw axis directions can be
    controlled with config parameter.

  [Antti Virtanen]
  * Loader now initializes plugins in reverse order so depenencies gets
    initialized first.
  * Moved context related sensor startup from main() to sensor plugin Init().
  * Replaced some magic number #define with static consts.
  * AvgVarFilter data is now protected with mutex.
  * Bin and RingBuffer refactoring.
  * magneticvariation GConf reading in DeclinationFilter fixed.
  * libsensordatatypes.so will now register all necessary metatypes during initialization.
  * Refactored makefiles and removed some unnecessary/deprecated definitions.
  * qt-api now hides internals behind pimpl. (Fixes: NB#198369).
  * Implemented buffering with few unit test cases.
  * Replaced old index based accessors for available dataranges and intervals
    with methods which query list of data with single dbus call.
  * Some const correctness fixes.
  * Changed some destructors to virtual which are used in inheritance.
  * Fixed memory leak from OrientationChain.
  * Removed SocketHandler::killSocket() hack. QObject::deleteLater() is used
    to clean up sockets.
  * Fixed crash and reliability issues from StandbyOverrideTest and PowerManagementTest. Fixes: NB#204003.