@@ -51,10 +51,8 @@ orientation_discard_time = 750000
 
 
 # Calibration handler parameters
-calibration_background_rate =  1000
 calibration_rate = 100
-calibration_stopped_rate = 1000
-calibration_timeout = 900000
+calibration_timeout = 60000
 
 ### Plugins
 ###
